# MacroPlacement

./: .gitignore  README.md
Clustering/: README.md  README.txt
Clustering/utils/: create_clustered_netlist_def.tcl.old
CodeElements/SimulatedAnnealingGWTW/: .gitignore  CMakeLists.txt  LICENSE  README.md
CodeElements/SimulatedAnnealingGWTW/src/: basic_object.h  grid.h  main.cpp  net.h  plc_netlist.h  plc_netlist_cost.cpp  plc_netlist_fd_placer.cpp  plc_netlist_io.cpp  plc_netlist_sa.cpp  plc_object.cpp  plc_object.h
CodeElements/SimulatedAnnealingGWTW/test/ariane/: run.sh
CodeElements/SimulatedAnnealingGWTW/test/ariane133_ng45/: initial.plc  run.sh
CodeElements/SimulatedAnnealingGWTW/test/ariane_X2_xflip/: initial.plc  run.sh
CodeElements/SimulatedAnnealingGWTW/test/ariane_X4_xflip_yflip/: initial.plc  run.sh
CodeElements/SimulatedAnnealingGWTW/test/ariane_asap7/: initial.plc  run.sh
CodeElements/SimulatedAnnealingGWTW/test/bp_asap7/: initial.plc  run.sh
CodeElements/SimulatedAnnealingGWTW/test/bp_ng45/: initial.plc  run.sh
CodeElements/SimulatedAnnealingGWTW/test/mempool_group_asap7/: initial.plc  run.sh
CodeElements/SimulatedAnnealingGWTW/test/mempool_group_ng45/: initial.plc  run.sh
CodeElements/SimulatedAnnealingGWTW/tools/: docker_mp_sa
CodeElements/SimulatedAnnealingGWTW/util/: gen_cost_plot.py  gen_sa_jobs.py  golden_eval.py
Docs/: README.md
ExperimentalData/: README.md
Flows/: README.md
Flows/util/: README.md  (+28 more)
Plc_client/: README.md  plc_client.py  plc_client_os.py  plc_client_os_test.py
SPNR/: README.md
Testcases/: README.md
(+1148 files in other folders)
